Bug 54155 - EDITING: Clicking on Drawing after editing a Group inside a Group causes Crash
Summary: EDITING: Clicking on Drawing after editing a Group inside a Group causes Crash
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.5.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: BSA target:4.4.0 target:4.2.6 target:...
Keywords:
: 55659 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-28 11:45 UTC by elicoten
Modified: 2014-07-05 09:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
An document where you can try out the problem. (10.31 KB, application/vnd.oasis.opendocument.text)
2012-08-28 11:45 UTC, elicoten
Details
bt with symbols on master (4.60 KB, text/plain)
2012-08-31 23:32 UTC, Julien Nabet
Details
bt console from master sources (2.19 KB, text/plain)
2014-06-25 19:50 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description elicoten 2012-08-28 11:45:09 UTC
Created attachment 66217 [details]
An document where you can try out the problem.

Problem description: 
LibreOffice crashes when you click on a drawing after using the edit group option twice i.e. to edit a group which nested  inside another group.

Additionally, the OK button on the error message does not respond to a mouse click but does respond when the spacebar key is pressed.

Steps to reproduce:
1. Right click on the drawing object (e.g. in the attached example document the blue rectangle), select 'Edit Group'
2. Right click on one of the inner groups (e.g. the smaller rectangle with a lighter blue square in the bottom right hand corner), select 'Edit Group'
3. Click outside of the drawing object to de-select it
4. Click anywhere on the drawing object
5. The error message appears that LibreOffice crashed unexpectedly and is going to save your documents.
6. Click on the OK button and observe

Current behavior:
Crash! And the OK button error message doesn't respond to a mouse click. Pressing SpaceBar when the error window has focus does work though.

Expected behavior:
The drawing object should be re-selected.
There should be no error message, but if any message does popup, the OK button should respond to a mouse click.
              
Browser: Mozilla/5.0 (Windows NT 5.1; rv:14.0) Gecko/20100101 Firefox/14.0.1

Note that this problem happened on LibreOffice 3.5.4.2 so I upgraded to 3.6.0 and the problem persisted. This happened on a large document so I created a simple example document to see if it was something funny about the document. But when I created a brand new document the same thing happened. I attach the simple example.
Comment 1 Julien Nabet 2012-08-31 23:32:36 UTC
Created attachment 66426 [details]
bt with symbols on master

On pc Debian x86-64 with master sources updated today, I reproduced the problem.
Attached bt.
Comment 2 CassieLX 2013-12-16 17:00:58 UTC
*** Bug 55659 has been marked as a duplicate of this bug. ***
Comment 3 mail 2014-02-25 19:00:59 UTC
Still the same on 4.1.5.3 (Win7 64b). And this problem is even older than 3.5.x: We've got lots of hierarchically grouped drawings in our documents, so one of the first things I learned when working with LO (still OO 3.3.x then) was to NEVER edit graphics in writer. Instead, copy the graphics to an empty draw documents and paste it back after editing. 

Also one of the first things I tell colleagues and students who are new to LO (and one of the things that have turned away some colleagues after a short while). But thanx for the detailed description (group within a group) and for the tip with the space bar - that was new to me :-)
Comment 4 mail 2014-06-24 05:48:22 UTC
Still the same in LO 4.2.5.2 - most annoying.
Comment 5 Julien Nabet 2014-06-25 19:50:08 UTC
Created attachment 101761 [details]
bt console from master sources

On pc Debian x86-64 with master sources updated today, I could still reproduce this.
I update the bt
Comment 6 Commit Notification 2014-06-25 19:59:53 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7bd94d73ec56622685d0e23f8b5133ba110524be

Resolves fdo#54155: Crash when playing with a Group inside a Group



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-06-26 15:41:29 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=01ee29125610a0fe4d6dcb080da09e3961f1236a&h=libreoffice-4-2

Resolves fdo#54155: Crash when playing with a Group inside a Group


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-06-26 15:41:44 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=44ae2ff6d2271949b2a4d22d017003f948b6aa2a&h=libreoffice-4-3

Resolves fdo#54155: Crash when playing with a Group inside a Group


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Julien Nabet 2014-06-26 15:43:50 UTC
Following the Caolan's review, I put it FIXED.
Comment 10 Fahad Al-Saidi 2014-07-05 09:37:00 UTC
I tried to reproducet this bug on libreoffice 4.4.0.0.alpha0+ and I can confirm that is fixed.